fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
 	margin: 0;
+	overflow-x: hidden;
 	font-family: var(--primary-font);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
